--- a/src/Imie/GameBundle/Resources/public/css/main.css
+++ b/src/Imie/GameBundle/Resources/public/css/main.css
@@ -16,49 +16,169 @@ version: 2.6.0
 */
 body{font:13px/1.231 arial,helvetica,clean,sans-serif;*font-size:small;*font:x-small;}select,input,button,textarea{font:99% arial,helvetica,clean,sans-serif;outline: none;}table{font-size:inherit;font:100%;}pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 
+html {
+    height:100%;
+}
+
 body
 {
-  font: 14px "Lucida Grande", Lucida, Verdana, sans-serif;
-  background-color: #828f95;
+    font: 14px "Lucida Grande", Lucida, Verdana, sans-serif;
+    background-color: #2680F3;
+    height:100%;
 }
 
 #container
 {
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+    height:100%;
 }
 
 .content {
-  width: 783px;
-  margin: 0 auto;
+    width: 960px;
+    margin: 0 auto;
+    padding:0px 15px 0px 15px;
+    box-sizing:border-box;
+}
+
+#header {
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0;
+    background: #222;
+    z-index: 100;
+    color:white;
+}
+
+#header #bar {
+    width: 100%;
+    margin: auto;
+    height: 56px;
+    position: relative;
+}
+
+#header #title{
+    position:absolute;
+    top:0px;
+    line-height:56px;
+}
+
+#header #title h1{
+    font-size:26px;
+    display:block;
+    float:left;
+    padding:0px 15px 0px 10px;
+    font-variant:small-caps;
+}
+
+#header #title h2{
+    font-size:14px;
+    margin-top:5px;
+    display:block;
+    float:left;
+}
+
+#header #logout{
+    position:absolute;
+    top:0px;
+    right:210px;
+    line-height:56px;
+    padding:0px 15px;
+    color:white;
+}
+
+#header i, #header p{
+    float:right;
+    display:block;
+}
+
+#header i{
+    margin-top:20px;
+    font-size:16px;
+    padding-left:15px;
+}
+
+#red {
+    float: left;
+    width: 30%;
+    height: 56px;
+    border-bottom: 4px solid #e1443d;
+}
+
+#blue {
+    float: left;
+    width: 10%;
+    height: 56px;
+    border-bottom: 4px solid #3bb9ff;
+}
+
+#green {
+    float: left;
+    width: 15%;
+    height: 56px;
+    border-bottom: 4px solid #62C506;
+}
+
+#orange {
+    float: left;
+    width: 20%;
+    height: 56px;
+    border-bottom: 4px solid orange;
+}
+
+#blue2 {
+    float: left;
+    width: 5%;
+    height: 56px;
+    border-bottom: 4px solid #3bb9ff;
+}
+
+#pink {
+    float: left;
+    width: 20%;
+    height: 56px;
+    border-bottom: 4px solid #ff0dd0;
+}
+
+#content {
+    background-color: white;
+    min-height:100%;
+    box-shadow: 0px 0px 10px #333;
+    width: 960px;
+    margin: 0 auto;
+}
+
+#content .content {
+    padding-top:60px;
 }
 
 .error_list
 {
-  color: red;
+    color: red;
 }
 
 strong
 {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 em
 {
-  font-style: italic;
+    font-style: italic;
 }
 
 .flash_notice
 {
-  margin: 3px 0;
-  padding: 7px;
-  background-color: #cfc;
+    margin: 3px 0;
+    padding: 7px;
+    background-color: #cfc;
 }
 
 .flash_error
 {
-  margin: 3px 0;
-  padding: 7px;
-  background-color: #f33;
-  color: #fff;
+    margin: 3px 0;
+    padding: 7px;
+    background-color: #f33;
+    color: #fff;
 }
