--- a/src/Imie/GameBundle/Resources/views/Home/index.html.twig
+++ b/src/Imie/GameBundle/Resources/views/Home/index.html.twig
@@ -4,3 +4,6 @@
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('bundles/imiegame/css/home.css') }}" type="text/css" media="all" />
 {% endblock %}
+
+{% block content %}
+{% endblock %}
