--- a/src/Imie/GameBundle/Resources/views/layout.html.twig
+++ b/src/Imie/GameBundle/Resources/views/layout.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Imie Game - Hangman</title>
+    <title>Hangman - Imie Game</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('bundles/imiegame/css/main.css') }}" type="text/css" media="all" />
