--- a/src/Imie/GameBundle/Resources/public/css/main.css
+++ b/src/Imie/GameBundle/Resources/public/css/main.css
@@ -55,7 +55,9 @@ body
     width: 100%;
     margin: auto;
     height: 56px;
-    position: relative;
+    position: absolute;
+    top:0px;
+    background:#222;
 }
 
 #header #title{
@@ -81,9 +83,8 @@ body
 }
 
 #header #logout{
-    position:absolute;
+    position:relative;
     top:0px;
-    right:210px;
     line-height:56px;
     padding:0px 15px;
     color:white;
@@ -92,6 +93,7 @@ body
 #header i, #header p{
     float:right;
     display:block;
+    position:relative;
 }
 
 #header i{
@@ -152,6 +154,21 @@ body
 
 #content .content {
     padding-top:60px;
+    text-align:center;
+}
+
+#content #subtitle {
+    padding-top:40px;
+}
+
+#content #subtitle h1 {
+    font-size:34px;
+    padding-bottom:4px;
+}
+
+#content #subtitle h2 {
+    font-size:20px;
+    color:#aaa;
 }
 
 .error_list
