--- a/src/Imie/GameBundle/Resources/views/Game/index.html.twig
+++ b/src/Imie/GameBundle/Resources/views/Game/index.html.twig
@@ -4,3 +4,7 @@
     {{ parent() }}
     <link rel="stylesheet" href="{{ asset('bundles/imiegame/css/game.css') }}" type="text/css" media="all" />
 {% endblock %}
+
+{% block content %}
+
+{% endblock %}
