--- a/src/Imie/GameBundle/Resources/public/css/main.css
+++ b/src/Imie/GameBundle/Resources/public/css/main.css
@@ -208,16 +208,21 @@ body
     box-shadow: 0px 0px 10px #333;
     width: 960px;
     margin: 0 auto;
+    height:auto;
 }
 
 #content .content {
     padding-top:60px;
     padding-bottom:60px;
     text-align:center;
+    height:auto;
+    min-height:100%;
+    overflow: hidden;
 }
 
 #content #subtitle {
     padding-top:40px;
+    padding-bottom:100px;
 }
 
 #content #subtitle h1 {
@@ -258,4 +263,40 @@ em
     padding: 7px;
     background-color: #f33;
     color: #fff;
+}
+
+.btn {
+    position:relative;
+    background-color: #2680F3;
+    border-radius: 3px;
+    color: #fff;
+    cursor: pointer;
+    overflow: hidden;
+    box-shadow: 1px 1px 2px black;
+}
+
+.btn span {
+    position: relative;
+    z-index: 1;
+}
+
+.btn .circle {
+    position: absolute;
+    z-index: 0;
+    border-radius: 50%;
+    transform: scale(0);
+    opacity: 1;
+    width: 100px;
+    height: 100px;
+}
+
+.btn .circle.animate {
+    animation: grow 0.5s linear;
+}
+
+@keyframes grow {
+    to {
+        transform: scale(2.5);
+        opacity: 0;
+    }
 }
